--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@CookieTrack-io/cookietrack-types",
-    "version": "1.0.2",
+    "name": "cookietrack-types",
+    "version": "1.0.0",
     "description": "Common Typings for CookieTrack and the public API",
     "main": "dist/index.js",
     "scripts": {
