--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
     "name": "cookietrack-types",
-    "version": "1.0.0",
-    "description": "Common Typings for CookieTrack and the public API",
+    "version": "1.1.0",
+    "description": "Common Typings for CookieTrack.",
     "main": "dist/index.js",
     "scripts": {
-        "build": "tsc",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "tsc"
     },
     "repository": {
         "type": "git",
@@ -16,7 +15,7 @@
         "Types",
         "TypeScript"
     ],
-    "author": "NCookiez and Trevor Richard",
+    "author": "Ncookie & Trevor Richard",
     "license": "MIT",
     "types": "./dist/index.d.ts",
     "bugs": {
