Updated Build Scripts & Republished

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "cookietrack-types",
-    "version": "1.5.9",
+    "version": "1.6.0",
     "description": "Common Typings for CookieTrack.",
     "main": "dist/index.js",
     "scripts": {
+        "prepack": "npm run build",
         "build": "tsc"
     },
     "repository": {
